--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -11,14 +11,7 @@ jobs:
   welcome:
     runs-on: ubuntu-latest
     steps:
-      - name: Post welcome message
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: "🎉 Welcome!! Thanks for opening your first pull request! We’ll review it soon. 🚀"
-            })
+      - run: gh pr comment "$PR_URL" --body "Welcome to the repository!"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
